tests/build/cases/widget_new/incorrect_arg_type4.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
  --> cases/widget_new/incorrect_arg_type4.rs:7:13
   |
7  |        let _ = wgt! {
   |  ______________^
8  | |          // only background_gradient gets highlighted here because generics..
9  | |          background_gradient = {
   | | _________-
10 | ||             axis: 0.deg(),
11 | ||             stops: true
   | ||_________________- required by a bound introduced by this call
12 | |          }
13 | |      };
   | |______^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
   |
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `background_gradient::stops`
  --> $WORKSPACE/zero-ui/src/properties/visual.rs
   |
   | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
   |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `background_gradient::stops`
